--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,9 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+
+
+exchange:
+  provider: currencyLayerClient
+  api:
+    key: ${EXCHANGE_API_KEY}
