--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -6,18 +6,16 @@ spring:
     name: exchanger
 
 
+
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/exchanger}
-    username: ${SPRING_DATASOURCE_USERNAME:exchanger}
-    password: ${SPRING_DATASOURCE_PASSWORD:exchanger}
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
   jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-    show-sql: true
     hibernate:
       ddl-auto: update
+    show-sql: false
 
 
 exchange:
